--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "static-site",
+  "name": "readme-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "generates readme markdown",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "shmoesolid",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.3.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shmoesolid/README-Generator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/shmoesolid/README-Generator/issues"
+  },
+  "homepage": "https://github.com/shmoesolid/README-Generator#readme"
 }
